Fix overflow in long card header

--- a/src/ui/components/Card/Card.scss
+++ b/src/ui/components/Card/Card.scss
@@ -13,6 +13,7 @@ $footer-padding: 10px;
   font-size: $font-size-default;
   margin-bottom: 1px;
   margin-top: 0;
+  word-wrap: break-word;
 }
 
 .Card-contents {
